<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_171818">

    <RelativeLayout
        android:id="@+id/rl_video_accept"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/remote_video_view_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <FrameLayout
            android:id="@+id/local_video_view_container"
            android:layout_width="110dp"
            android:layout_height="140dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/lk_dp_10" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_video_min"
        android:layout_width="@dimen/lk_dp_35"
        android:layout_height="@dimen/lk_dp_35"
        android:layout_margin="@dimen/lk_dp_15"
        android:padding="@dimen/lk_dp_5"
        android:src="@mipmap/icon_voice_min"
        android:visibility="invisible" />


    <LinearLayout
        android:id="@+id/ll_video_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_video_min"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_video_avatar"
            android:layout_width="@dimen/lk_dp_120"
            android:layout_height="@dimen/lk_dp_120"
            android:src="@mipmap/icon_choose_group_default" />


        <TextView
            android:id="@+id/tv_video_nickUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/lk_dp_15"
            android:text="@string/str_sva_nick"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/lk_sp_20" />


        <TextView
            android:id="@+id/tv_video_callMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="邀请你视频聊天"
            android:textColor="@color/color_B3FFFFFF"
            android:textSize="15dp"
            android:visibility="visible" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_video_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_video_head"
        android:layout_marginTop="@dimen/lk_dp_100">


        <LinearLayout
            android:id="@+id/ll_video_times"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/lk_dp_10"
                android:gravity="center"
                android:text="通话时长"
                android:textColor="@color/color_B3FFFFFF"
                android:textSize="@dimen/lk_sp_14" />

            <Chronometer
                android:id="@+id/ct_video_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/lk_dp_5"
                android:gravity="center"
                android:text="@string/str_sva_timeValue"
                android:textColor="@color/color_B3FFFFFF"
                android:textSize="@dimen/lk_sp_18"
                android:textStyle="bold" />

        </LinearLayout>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_video_status">


        <LinearLayout
            android:id="@+id/ll_video_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:visibility="visible">


            <RelativeLayout
                android:id="@+id/rl_video_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_video_camera"
                    android:layout_width="@dimen/lk_dp_60"
                    android:layout_height="@dimen/lk_dp_60"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/video_sxt_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_video_camera"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/lk_dp_8"
                    android:gravity="center"
                    android:text="@string/str_sva_camera_zh"
                    android:textColor="@color/color_FFFFFF"
                    android:textSize="@dimen/lk_sp_12" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_video_outEnd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_video_outEnd"
                    android:layout_width="@dimen/lk_dp_60"
                    android:layout_height="@dimen/lk_dp_60"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerInside"
                    android:src="@mipmap/icon_voice_end" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_video_outEnd"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/lk_dp_8"
                    android:gravity="center"
                    android:text="@string/str_sva_end"
                    android:textColor="@color/color_FFFFFF"
                    android:textSize="@dimen/lk_sp_12" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_video_mt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_video_mt"
                    android:layout_width="@dimen/lk_dp_60"
                    android:layout_height="@dimen/lk_dp_60"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/voice_mt_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_video_mt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/lk_dp_8"
                    android:gravity="center"
                    android:text="@string/str_sva_mt"
                    android:textColor="@color/color_FFFFFF"
                    android:textSize="@dimen/lk_sp_12" />
            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_video_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_video_incomeEnd"
                    android:layout_width="@dimen/lk_dp_60"
                    android:layout_height="@dimen/lk_dp_60"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerInside"
                    android:src="@mipmap/icon_voice_end" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_video_incomeEnd"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/lk_dp_8"
                    android:gravity="center"
                    android:text="@string/str_sva_end"
                    android:textColor="@color/color_FFFFFF"
                    android:textSize="@dimen/lk_sp_12" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_video_incomeAccept"
                    android:layout_width="@dimen/lk_dp_60"
                    android:layout_height="@dimen/lk_dp_60"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerInside"
                    android:src="@mipmap/icon_voice_accept" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_video_incomeAccept"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/lk_dp_8"
                    android:gravity="center"
                    android:text="@string/str_sva_accept"
                    android:textColor="@color/color_FFFFFF"
                    android:textSize="@dimen/lk_sp_12" />
            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>
